syntax = "proto3";
option csharp_namespace = "Barkditor.Protobuf";
package ProjectFiles;

import "google/protobuf/empty.proto";
import "Protos/google/api/annotations.proto";

// Service for project file tree output
service ProjectFiles {
  // Returns file tree by directory path and save this path
  rpc SetProjectPath (SetProjectPathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/SetProjectPath"
    };
  }
  
  // Returns saved directory path
  rpc GetProjectPath (google.protobuf.Empty) returns (GetProjectPathResponse){
    option (google.api.http) = {
      get: "/GetProjectPath"
    };
  }
  
  // TODO: add endpoint which returns list of recently opened projects
}

// set project path
message SetProjectPathRequest {
  string path = 1;
}

// get project files path
message GetProjectPathResponse {
  string path = 1;
}